fix: test: Gevent monkey patching (fixes #6).
Ensure `gevent` monkey patching is performed
only for tests requiring it.

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ setenv =
     ms_graph: _PYTEST_TOX_VAR = --variables instance/app_config.yaml
     ms_graph: _PYTEST_TOX_RUN = tests/test_ms_graph.py
 
-    benchmark: _PYTEST_TOX_RUN = tests/benchmark_redis.py
+    benchmark: _PYTEST_TOX_RUN = tests/gevent_enabled/benchmark_redis.py
 
 [coverage:run]
 include =
