--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,16 @@
-[tool.black]
-line-length = 88
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  |  \.tox
-  | \.pytest_cache
-  | __pycache__
-)/
-'''
-
 [tool.poetry]
 name = "ms-graph-exporter"
 version = "0.1.0-rc.1"
 description = "A distributed Celery application to export time-domain data periodically from Microsoft Graph API into a buffer key-value store."
 
-license = "MIT"
-
 authors = ["Oleksiy Kuzmenko <oleksiy.kuzmenko@undp.org>"]
+
+readme = "README.md"
+license = "MIT"
+documentation = "https://msgraphexporter.readthedocs.io/en/latest/"
 
 repository = "https://github.com/undp/MsGraphExporter"
 homepage = "https://github.com/undp/MsGraphExporter"
-
-readme = "README.md"
 
 include = [
   "CHANGELOG.md",
@@ -53,67 +41,58 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+python = "^3.6"
+
 adal = "^1.2"
 celery= "^4.3"
-celery-redbeat = "^0.13.0"
-gevent = "^1.4.0"
-python = "^3.6"
-redis = "^3.2"
-requests = "^2.20.1"
-typing = "^3.7"
+celery-redbeat = "^0.13"
+gevent = "^1.4"
 pyyaml = "^3.13"
+redis = "^3.3"
+typing = "^3.7"
 
-# test
-pytest = {version = "^5.0.1", optional = true}
-pytest-benchmark = {version = "^3.2", extras = ["aspect"], optional = true}
-pytest-cov = {version = "^2.7", optional = true}
-pytest-dockerc = {version = "^1.0", optional = true}
-pytest-instafail = {version = "^0.4.1", optional = true}
-pytest-lazy-fixture = {version = "^0.5.2", optional = true}
-pytest-random-order = {version = "^1.0", optional = true}
-pytest-variables = {version = "^1.7", extras = ["yaml"], optional = true}
-
-# docs
-recommonmark = {version = "^0.5.0", optional = true}
-sphinx = {version = "^2.0", optional = true}
-sphinx_rtd_theme = {version = "^0.4.3", optional = true}
-sphinx-autodoc-typehints = {version = "^1.7", optional = true}
-
-# code-lint
-flake8 = {version = "^3.7", optional = true}
-flake8-import-order = {version = "^0.18.1", optional = true}
-flake8-bandit = {version = "^2.1", optional = true}
-flake8-blind-except = {version = "^0.1.1", optional = true}
-flake8-bugbear = {version = "^19.3", optional = true}
-flake8-builtins = {version = "^1.4", optional = true}
-flake8-docstrings = {version = "^1.3", optional = true}
-flake8-logging-format = {version = "^0.6.0", optional = true}
-flake8-mypy = {version = "^17.8", optional = true}
-pep8-naming = {version = "^0.8.2", optional = true}
-pygments = {version = "^2.4", optional = true}
+# TODO:20190912:001
+#   pytest-dockerc requires docker-compose (>=1.17.1) which in turn requires
+#   requests (<2.21)
+requests = "^2.20"
 
 # code-format
 black = {version = "^19.3b0", optional = true}
 blacken-docs = {version = "^0.5.0", optional = true}
 
+# code-lint
+flake8 = {version = "^3.7", optional = true}
+flake8-import-order = {version = "^0.18", optional = true}
+flake8-bandit = {version = "^2.1", optional = true}
+flake8-blind-except = {version = "^0.1", optional = true}
+flake8-bugbear = {version = "^19.8", optional = true}
+flake8-builtins = {version = "^1.4", optional = true}
+flake8-docstrings = {version = "^1.4", optional = true}
+flake8-logging-format = {version = "^0.6", optional = true}
+flake8-mypy = {version = "^17.8", optional = true}
+pep8-naming = {version = "^0.8", optional = true}
+pygments = {version = "^2.4", optional = true}
+
+# docs
+recommonmark = {version = "^0.5.0", optional = true}
+sphinx = {version = "^2.2", optional = true}
+sphinx-rtd-theme = {version = "^0.4", optional = true}
+sphinx-autodoc-typehints = {version = "^1.8", optional = true}
+
+# test
+pytest = {version = "^5.1", optional = true}
+pytest-benchmark = {version = "^3.2", extras = ["aspect"], optional = true}
+pytest-cov = {version = "^2.7", optional = true}
+pytest-dockerc = {version = "^1.0", optional = true}
+pytest-instafail = {version = "^0.4", optional = true}
+pytest-lazy-fixture = {version = "^0.5", optional = true}
+pytest-random-order = {version = "^1.0", optional = true}
+pytest-variables = {version = "^1.8", extras = ["yaml"], optional = true}
 
 [tool.poetry.extras]
-test = [
-  "pytest",
-  "pytest-benchmark",
-  "pytest-cov",
-  "pytest-dockerc",
-  "pytest-instafail",
-  "pytest-lazy-fixture",
-  "pytest-random-order",
-  "pytest-variables",
-]
-
-docs = [
-  "recommonmark",
-  "sphinx",
-  "sphinx_rtd_theme",
-  "sphinx-autodoc-typehints",
+code-format = [
+  "black",
+  "blacken-docs",
 ]
 
 code-lint = [
@@ -131,17 +110,42 @@ code-lint = [
   "pydocstyle",
 ]
 
-code-format = [
-  "black",
-  "blacken-docs",
+docs = [
+  "recommonmark",
+  "sphinx",
+  "phinx-rtd-theme",
+  "sphinx-autodoc-typehints",
+]
+
+test = [
+  "pytest",
+  "pytest-benchmark",
+  "pytest-cov",
+  "pytest-dockerc",
+  "pytest-instafail",
+  "pytest-lazy-fixture",
+  "pytest-random-order",
+  "pytest-variables",
 ]
 
 [tool.poetry.dev-dependencies]
-pre-commit = "^1.16"
-tox = "^3.9"
-bump2version = "^0.5.10"
+bump2version = "^0.5"
 gitchangelog = "^3.0"
-pystache = "^0.5.4"
+pre-commit = "^1.18"
+pystache = "^0.5"
+tox = "^3.14"
+
+[tool.black]
+line-length = 88
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  |  \.tox
+  | \.pytest_cache
+  | __pycache__
+)/
+'''
 
 [build-system]
 requires = ["poetry>=0.12"]
