chg: pkg: Code format and lint automation. !minor
- Transition to code formatting and linting with `pre-commit` in `tox`.
- Remove formatting and linting dependencies from `pyproject.toml`.
- Re-formatted `.pre-commit-config.yaml` for better readability.

--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,8 @@ commands =
     poetry install -v --no-dev --extras=test
     pytest {env:_PYTEST_TOX_ARGS:} {env:_PYTEST_TOX_VAR:} {env:_PYTEST_TOX_RUN:/tests/none.py} {posargs}
 setenv =
-    _PYTEST_TOX_ARGS = -m "not functional" --benchmark-skip --random-order --cov  --cov-report= 
-    ms_graph: _PYTEST_TOX_ARGS = -m "functional" --random-order --cov  --cov-report= 
+    _PYTEST_TOX_ARGS = -m "not functional" --benchmark-skip --random-order --cov  --cov-report=
+    ms_graph: _PYTEST_TOX_ARGS = -m "functional" --random-order --cov  --cov-report=
     benchmark: _PYTEST_TOX_ARGS = --benchmark-only --benchmark-autosave --random-order
 
     COVERAGE_FILE = .coverage.{envname}
@@ -71,11 +71,10 @@ commands =
     sphinx-build -b html -d {envtmpdir}/doctrees docs docs/_build
 
 [testenv:linting]
+skip_install = True
 basepython = python3
-whitelist_externals = poetry
-commands =
-    poetry install -v --no-dev --extras=code-lint
-    flake8 {posargs}
+deps = pre-commit>=1.18,<2
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [pytest]
 markers =
