--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,49 @@
 repos:
--   repo: https://github.com/python/black
+  - repo: https://github.com/python/black
     rev: 19.3b0
     hooks:
-    -   id: black
+      - id: black
         args: [--safe, --quiet]
         language_version: python3
--   repo: https://github.com/asottile/blacken-docs
+  - repo: https://github.com/asottile/blacken-docs
     rev: v1.3.0
     hooks:
-    -   id: blacken-docs
+      - id: blacken-docs
         additional_dependencies: [black==19.3b0]
         language_version: python3
--   repo: https://gitlab.com/pycqa/flake8
+  - repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.8
     hooks:
-    -   id: flake8
-        additional_dependencies: [
-                flake8-import-order,
-                flake8-bandit,
-                flake8-blind-except,
-                flake8-bugbear,
-                flake8-builtins,
-                flake8-docstrings,
-                flake8-logging-format,
-                flake8-mypy,
-                pep8-naming,
-                pygments,
+      - id: flake8
+        additional_dependencies:
+          [
+            flake8-import-order,
+            flake8-bandit,
+            flake8-blind-except,
+            flake8-bugbear,
+            flake8-builtins,
+            flake8-docstrings,
+            flake8-logging-format,
+            flake8-mypy,
+            pep8-naming,
+            pygments,
           ]
         language_version: python3
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: no-commit-to-branch
+      - id: no-commit-to-branch
         args: [--branch, master]
         language_version: python3
-    -   id: detect-private-key
-    -   id: check-symlinks
-    -   id: check-toml
-    -   id: check-yaml
-
+      - id: check-symlinks
+      - id: check-toml
+      - id: check-yaml
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.4.1
+    hooks:
+      - id: python-check-blanket-noqa
+      - id: python-use-type-annotations
+      - id: rst-backticks
