--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,8 @@ setenv =
 
     COVERAGE_FILE = .coverage.{envname}
 
+    ; REFACTOR:20190918:01
+    ;   get sensitive values from ENV, instead of `variables` fixture
     ms_graph: _PYTEST_TOX_VAR = --variables instance/app_config.yaml
     ms_graph: _PYTEST_TOX_RUN = tests/test_ms_graph.py
 
