--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,9 @@ pytest-dockerc = {version = "^1.0", optional = true}
 pytest-instafail = {version = "^0.4", optional = true}
 pytest-lazy-fixture = {version = "^0.5", optional = true}
 pytest-random-order = {version = "^1.0", optional = true}
+
+# REFACTOR:20190918:01
+#   get sensitive values from ENV, instead of `variables` fixture
 pytest-variables = {version = "^1.8", extras = ["yaml"], optional = true}
 
 [tool.poetry.extras]
