chg: test: Drop py versions for better CI. !minor

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ minversion = 3.6
 envlist =
     linting
     cov-init
-    py{36,37}-functional
+    functional
     cov-report
-    py{36,37}-benchmark
+    performance
     docs
 isolated_build = true
 skip_missing_interpreters = true
@@ -15,6 +15,7 @@ ignore_errors = false
 basepython = python3
 
 [testenv]
+basepython = python3
 passenv = COVERAGE_* GRAPH_* PYTEST_ADDOPTS
 whitelist_externals = poetry
 commands =
@@ -23,13 +24,13 @@ commands =
 setenv =
     _PYTEST_TOX_ARGS = -m "not functional" --benchmark-skip --random-order --cov  --cov-report=
     functional: _PYTEST_TOX_ARGS = -m "functional" --random-order --cov  --cov-report=
-    benchmark: _PYTEST_TOX_ARGS = --benchmark-only --benchmark-autosave --random-order
+    performance: _PYTEST_TOX_ARGS = --benchmark-only --benchmark-autosave --random-order
 
     COVERAGE_FILE = .coverage.{envname}
 
     functional: _PYTEST_TOX_RUN = tests/test_ms_graph.py
 
-    benchmark: _PYTEST_TOX_RUN = tests/gevent_enabled/benchmark_redis.py
+    performance: _PYTEST_TOX_RUN = tests/gevent_enabled/benchmark_redis.py
 
 [coverage:run]
 include =
