--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,8 +3,9 @@ commit = True
 message = "chg: pkg: Bump version: {current_version} → {new_version} !minor"
 tag = False
 current_version = 0.1.0-rc.2
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[\w.\d]+))?
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[\w.\d]+))?(\-(?P<post>(dev|post)\d+))?
 serialize =
+	{major}.{minor}.{patch}-{release}-{post}
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
