chg: test: `pytest` scripts discovery (fixes #11).

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ passenv = COVERAGE_* GRAPH_* PYTEST_ADDOPTS
 whitelist_externals = poetry
 commands =
     poetry install -v --no-dev --extras=test
-    pytest {env:_PYTEST_TOX_ARGS:} {env:_PYTEST_TOX_RUN:/tests/none.py} {posargs}
+    pytest {env:_PYTEST_TOX_ARGS:} {env:_PYTEST_TOX_RUN:/tests} {posargs}
 setenv =
     _PYTEST_TOX_ARGS = -m "not functional" --benchmark-skip --random-order --cov  --cov-report=
     functional: _PYTEST_TOX_ARGS = -m "functional" --random-order --cov  --cov-report=
@@ -28,9 +28,9 @@ setenv =
 
     COVERAGE_FILE = .coverage.{envname}
 
-    functional: _PYTEST_TOX_RUN = tests/test_ms_graph.py
+    functional: _PYTEST_TOX_RUN = tests/functional
 
-    performance: _PYTEST_TOX_RUN = tests/gevent_enabled/benchmark_redis.py
+    performance: _PYTEST_TOX_RUN = tests/performance
 
 [coverage:run]
 include =
